Sb 19100  Fix the checkbox css for rating on content with feedback  (#122)
* Issue#SB-19085 UI - Desktop App - Radio buttons not aligned to the text in RTL

* Issue#SB-19100 Fix the checkbox css for rating on content with feedback

* Issue#SB-19100 Fix the checkbox css for rating on content with feedback

* Issue#SB-19100 Fix the checkbox css for rating on content with feedback

* Issue#SB-19100 Fix the checkbox css for rating on content with feedback

--- a/src/client/src/app/modules/player-helper/components/content-rating/content-rating.component.scss
+++ b/src/client/src/app/modules/player-helper/components/content-rating/content-rating.component.scss
@@ -35,6 +35,7 @@
 
 .options-content {
   width: 55%;
+  position: relative;
 }
 
 .options-content-left {
@@ -51,17 +52,37 @@
   float: right;
 }
 
-input[type=checkbox]:after {
-  content: " ";
-  background-color: #0b4f9d;
-  color: var(--white);
-  display: inline-block;
-  visibility: visible;
-}
 
-input[type=checkbox]:checked:after {
-  content: "\2713";
-}
+  input[type="checkbox"] {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 3;
+    width: $base-block-space * 2;
+    height: $base-block-space * 2;
+    outline: 0;
+  }
+  
+  input[type=checkbox]:after {
+    content: " ";
+    background-color: transparent;
+    color: var(--white);
+    display: inline-block;
+    visibility: visible;
+    width: $base-block-space * 2;
+    height: $base-block-space * 2;
+  }
+  
+  input[type=checkbox]:checked:after {
+    // content: '✔';
+    content: '\2713';
+    border-radius: $sb-checkbox-border-radius;
+    font-weight: normal;
+    background-color: #0b4f9d;
+    color: var(--white);
+    padding:calculateRem(1px) calculateRem(4px) 0 calculateRem(4px);
+  }
 
 .textarea {
   resize: none;
